# parallel_tree_spec

./: CLAUDE.md  pyproject.toml
docs/: flashinfer_beam_search.md  hqq_quantization.md  sparse_attention.md  speculative_decoding.md
scripts/: bench_decode_latency.py  profile_forward.py  profile_step.py  run_experiment.py
src/parallel_tree_spec/: beam_search.py  experiment.py  metrics.py  quantization.py  tree.py  verification.py
src/parallel_tree_spec/flashinfer/: __init__.py  attention.py  attention_wrapper.py  cache_manager.py  modeling_llama.py  monkey_patch.py
src/parallel_tree_spec/sparse_attention/: __init__.py  base.py  noop.py  pillar.py
