[project]
name = "parallel_tree_spec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "transformers==4.57.3",
    "flashinfer-python",
    "hqq",
    "gemlite",
    "accelerate>=1.12.0",
    "nvtx",
]

[tool.uv]
no-build-isolation-package = ["torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
